--- a/wiinote.html
+++ b/wiinote.html
@@ -8,10 +8,31 @@
     <style>
         html {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 1.2em;
         }
 
         body {
-            margin: 0;
+            margin: 0 20px;
+        }
+
+        #input-container {
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        #input-container label {
+            display: flex;
+        }
+
+        #input-container span {
+            padding-right: 5px;
+        }
+
+        #input-container input, #input-container select {
+            flex: 1;
+            font-size: .8rem;
         }
 
         #cover {
@@ -29,10 +50,6 @@
 
         #cover > p {
             font-size: 32px;
-        }
-
-        h1 {
-            margin: 20px;
         }
 
         #notebar, #notebar-colors {
@@ -67,10 +84,43 @@
         <p>Click to start the page.</p>
     </div>
     <h1>Wiinote</h1>
+    <form id="input-container">
+        <label>
+            <span>Base Note: </span>
+            <select name="base-letter">
+                <option value="0" selected>C</option>
+                <option value="1">C♯ / D♭</option>
+                <option value="2">D</option>
+                <option value="3">D♯ / E♭</option>
+                <option value="4">E</option>
+                <option value="5">F</option>
+                <option value="6">F♯ / G♭</option>
+                <option value="7">G</option>
+                <option value="8">G♯ / A♭</option>
+                <option value="9">A</option>
+                <option value="10">A♯ / B♭</option>
+                <option value="11">B</option>
+            </select>
+            <select name="base-octave">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5" selected>5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+            </select>
+        </label>
+        <label>
+            <span>Note blocks:</span>
+            <input type="number" name="note-blocks" min="1" max="13" value="12">
+        </label>
+    </form>
     <div id="notebar"></div>
     <div id="notebar-colors"></div>
     <script>
-        const BASE_OCTAVE = 5;
         const C_FREQUENCIES = [
             16.35,    // C0
             32.70,    // C1
@@ -93,7 +143,23 @@
             3951.07,  // B7
             7902.13   // B8
         ];
-        const BASE_FREQ_INDEX = 5;
+        let blocks = 12;
+        let baseFreqIndex = 5;
+        let addedSemitones = 0;
+
+        document.querySelector('[name="base-octave"]').addEventListener('input', e => {
+            baseFreqIndex = +e.target.value;
+        });
+
+        document.querySelector('[name="base-letter"]').addEventListener('input', e => {
+            addedSemitones = +e.target.value;
+        });
+
+        document.querySelector('[name="note-blocks"]').addEventListener('input', e => {
+            blocks = e.target.value;
+            setNoteBlocks();
+        });
+
         /**
          * 
          * @param {number} base The base frequency.
@@ -110,12 +176,17 @@
             cover.style.display = 'none';
         });
 
-        for (let i = 0; i < 12; i++) {
-            const div = document.createElement('div');
-            div.setAttribute("data-semitone", `${11 - i}`);
-            document.getElementById("notebar-colors").append(div);
-            div.style.opacity = (i / 12);
-        };
+        const notebarColors = document.getElementById('notebar-colors');
+        function setNoteBlocks() {
+            notebarColors.textContent = '';
+            for (let i = 0; i < blocks; i++) {
+                const div = document.createElement('div');
+                div.setAttribute("data-semitone", `${(blocks + 1) - i}`);
+                notebarColors.append(div);
+                div.style.opacity = (i / blocks);
+            };    
+        }
+        setNoteBlocks();
 
         const notebar = document.getElementById('notebar');
 
@@ -142,8 +213,8 @@
         notebar.addEventListener('mousemove', (e) => {
             if (oscillator == null)
                 startOscillator();    
-            const semitone = ((1 - (e.clientY / e.target.clientHeight)) * 12) - 0.5;
-            const freq = getFrequency(C_FREQUENCIES[BASE_FREQ_INDEX], semitone);
+            const semitone = ((1 - (e.clientY / e.target.clientHeight)) * blocks) - 0.5 + addedSemitones;
+            const freq = getFrequency(C_FREQUENCIES[baseFreqIndex], semitone);
             updateFrequency(freq);
         });
 
